--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.4</version>
           <configuration>
+              <outputDirectory>.</outputDirectory>
             <archive>
               <manifest>
                 <mainClass>com.personal.hoasproject.TimeTracker</mainClass>
